Fix discover no image overflows to the whole page

--- a/SoloLearn/app/Scripts/styles/components/Shared/UserCard.scss
+++ b/SoloLearn/app/Scripts/styles/components/Shared/UserCard.scss
@@ -13,6 +13,7 @@
 			width: 100%;
 			.profile-avatar {
 				width: 100%;
+				max-height: 120px;
 			}
 		}
 		.profile-data {
